<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goals"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8fff8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_title"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="#62cabf"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#5bc8b2"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/relieve_anxiety"
            android:textColor="#d8fff8"
            android:textSize="20sp"
            android:layout_below="@id/titleText"
            android:layout_marginTop="45dp" />
        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#5bc8b2"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/improve_health"
            android:textColor="#d8fff8"
            android:textSize="20sp"
            android:layout_below="@id/button1"
            android:layout_marginTop="20dp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#5bc8b2"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/relationships"
            android:textColor="#d8fff8"
            android:textSize="20sp"
            android:layout_below="@id/button2"
            android:layout_marginTop="20dp" />
        <Button
            android:id="@+id/button4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#5bc8b2"
            android:padding="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/money"
            android:textColor="#d8fff8"
            android:textSize="20sp"
            android:layout_below="@id/button3"
            android:layout_marginTop="20dp" />
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_back"
            android:layout_below="@id/affirmations"
            android:layout_marginTop="20dp"
            android:backgroundTint="#5bc8b2"
            android:textColor="#d8fff8"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/affirmations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            android:textColor="#62cabf"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button4"
            android:layout_marginTop="30dp"/>



    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>